# easyprospect-service

./: .gitignore  .travis.yml  README.md
easyprospect-service/: .clang-format  .editorconfig  CMakeLists.txt  Minimal.runsettings  easyprospect-common.vcxproj  easyprospect-common.vcxproj.filters  easyprospect-config.vcxproj  easyprospect-config.vcxproj.filters  easyprospect-data-schema.vcxproj  easyprospect-data-schema.vcxproj.filters  easyprospect-data.vcxproj  easyprospect-data.vcxproj.filters  easyprospect-os-utils.vcxproj  easyprospect-os-utils.vcxproj.filters  easyprospect-service-control.vcxproj  easyprospect-service-control.vcxproj.filters  easyprospect-service-plugin-salesforce.vcxproj  easyprospect-service-plugin-salesforce.vcxproj.filters  easyprospect-service-shared.vcxproj  easyprospect-service-shared.vcxproj.filters  easyprospect-service.favdoc  easyprospect-service.sln  easyprospect-v8-plugin-print-console.vcxproj  easyprospect-v8-plugin-print-console.vcxproj.filters  easyprospect-v8.vcxproj  easyprospect-v8.vcxproj.filters  easyprospect-web-worker.vcxproj  easyprospect-web-worker.vcxproj.filters  easyprospect-web.vcxproj  easyprospect-web.vcxproj.filters  epsrv.sln  epsrv.vcxproj  epsrv.vcxproj.filters  epworker.vcxproj  epworker.vcxproj.filters  epworkercntl.vcxproj  epworkercntl.vcxproj.filters  incbin.vcxproj  incbin.vcxproj.filters
easyprospect-service/cmake/: FindSphinx.cmake
easyprospect-service/data/test/: args-epv8shell-0001.txt
easyprospect-service/data/test01/: args01.txt  argsClient01.txt  argsClient02.txt  argsWorkCntl01.txt  config.json  config01.json
easyprospect-service/epsrv/: epsrv.vcxproj  epsrv.vcxproj.filters
easyprospect-service/epworker/: epworker.vcxproj.filters
easyprospect-service/include/easyprospect-common/: easyprospect-plugin.h
easyprospect-service/include/easyprospect-config/: easyprospect-config-server.h  easyprospect-config-service.h  easyprospect-config-v8.h  easyprospect-config-wcntl.h  easyprospect-config-worker.h  easyprospect-config.h  easyprospect-defaults.h  easyprospect-registry.h  ep-backend-config.h  ep-listener-config.h  logging.h
easyprospect-service/include/easyprospect-data/: easyprospect-data.h  ep-incbin-01.in.h
easyprospect-service/include/easyprospect-data-schema/: easyprospect-data-schema.h
easyprospect-service/include/easyprospect-os-utils/: easyprospect-os-utils.h  getpid-linux.h  getpid-win.h
easyprospect-service/include/easyprospect-service-control/: epprocess-message.h
easyprospect-service/include/easyprospect-service-plugin-salesforce/: easyprospect-service-plugin-salesforce.h  ep-srv-plugin-sf-context.h
easyprospect-service/include/easyprospect-service-shared/: config.hpp  easyprospect-http-request.h  easyprospect-process-base.h  easyprospect-process-cntrl-client-base.h  easyprospect-process-cntrl-client-win.h  easyprospect-process-cntrl-client.h  easyprospect-process-message-actions.h  easyprospect-process-win.h  easyprospect-process.h  easyprospect-service-shared.h  externs.h  listener.h  message.hpp  rpc.hpp  server.h  server_certificate.hpp  service.hpp  session.hpp  types.hpp  uid.hpp  user_base.hpp  utility.hpp
easyprospect-service/include/easyprospect-v8/: EpJsResult.h  call.h  convert.h  easyprospect-v8-2.h  easyprospect-v8-plugin-print-console.h  easyprospect-v8-plugin.h  easyprospect-v8.h  function.h  ptr_traits.h  result_code.h  utility.h
easyprospect-service/include/easyprospect-web/: channel.hpp  config.hpp  easyprospect-server-downstream.h  easyprospect-web.h  http_message_util.h  listener.hpp  message.hpp  multithreading.h  rpc.hpp  server.h  server.hpp  service.hpp  user.hpp
easyprospect-service/include/easyprospect-web-worker/: app-error.h  blackjack.hpp  channel.hpp  channel_list.hpp  easyprospect-process-cntrl-client-base.h  easyprospect-process-cntrl-client-win.h  easyprospect-process-cntrl-client.h  easyprospect-process-message-actions.h  easyprospect-service-plugin.h  easyprospect-xml.h  listener.hpp  message.hpp  room.hpp  rpc.hpp  server.h  server.hpp  service.hpp  session.hpp  system.hpp  system_util.h  user.hpp  utility.hpp  worker-server-app.h  worker-server.h
easyprospect-service/include/epworkercntl/: control-worker.h  epprocess-action.h  epprocess-base.h  epprocess-linux.h  epprocess-message.h  epprocess-win.h  epprocess.h  make-server.h
easyprospect-service/libEpWeb/: db_layer.cpp  db_layer.h  libEpWeb.vcxproj  request_processor.cpp
easyprospect-service/src/easyprospect-common/: easyprospect-common.cpp  easyprospect-plugin.cpp
easyprospect-service/src/epsrv/: epsrv.cpp
easyprospect-service/tests/: CMakeLists.txt  EPCT_Simple_V8_01.cpp  EPCT_TestMethodsSimple.cpp  EPCT_TestMethodsSimple.h  EPCT_Utils.cpp  EPCT_Utils.h  EPCT_V8_Salesforce.cpp  EPCT_gentests-tmpl.cpp  EPCT_gentests.cpp  EP_CPP_TEST_CmdlineV801.cpp  EP_CPP_TEST_main.cpp  EP_CPP_TEST_main.vcxproj  EP_CPP_TEST_main.vcxproj.filters
easyprospect-service/tools/: buildboost.bat  buildmsvs01.ps1  buildopenssl.bat  buildv801.bat  buildvcpkg01.sh  pushdeb01.sh  pushwin01.sh
(+82 files in other folders)
